# ClientApp/src/app/api/models.ts
@@ -2,3 +2,5 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export type { ChatRequest } from './models/chat-request';
+export type { UserMessage } from './models/user-message';
