# ClientApp/src/app/api/models/chat-request.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface ChatRequest {
+  sessionId?: string | null;
+  systemPrompt?: string | null;
+  userInput?: string | null;
+}
