# ClientApp/src/app/api/models/user-message.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface UserMessage {
+  content?: string | null;
+  prompt?: string | null;
+}
