# ClientApp/src/app/api/services.ts
@@ -2,4 +2,6 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export { ChatService } from './services/chat.service';
+export { GeminiChatService } from './services/gemini-chat.service';
 export { WeatherForecastService } from './services/weather-forecast.service';
